text-overflow issue fixed

--- a/src/components/search/css/search-bar-experience.scss
+++ b/src/components/search/css/search-bar-experience.scss
@@ -613,6 +613,7 @@ body::-webkit-scrollbar {
     span{
       letter-spacing: normal;
       color: #161620;
+      word-wrap: break-word;
     }
   }
   .botMessage{
